tests/assembler/pass/test2.ial
type Foo align 0
{
}
