tests/assembler/fail/test6.ial
type Foo align 7
{
}
